Prevent flex wrapping elements out of place

--- a/src/scss/common/search.scss
+++ b/src/scss/common/search.scss
@@ -100,3 +100,7 @@ nav.search {
     }
   }
 }
+
+.search-filters > div {
+  flex-flow: row nowrap;
+}
